--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,9 @@ tests/e2e/reports/
 
 venv
 scraper/__pycache__/
-
+api/__pycache__/
+database/__pycache__/
+outlets.db
 
 # dependencies
 /node_modules
